# telebot-template-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  plugin.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: release.yml
plugin/: CMakeLists.txt
plugin/include/ttp/: plugin.h
plugin/src/: main.cpp
plugin/src/ttp/: plugin.cpp
scripts/: __main__.py  config.py
scripts/commands/: build.py  init.py  install.py  package.py  run.py  setup.py
scripts/utils/: package.py  platform.py  project.py
src/: main.cpp
